<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/backwzx"
    tools:context=".AdminStock">


    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="45dp"
        android:background="@color/common_google_signin_btn_text_dark_pressed"
        android:hint="@string/ItemName"
        android:inputType="textMultiLine"
        android:padding="20dp" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="29dp"
        android:layout_marginRight="45dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:hint="@string/itemPrice"
        android:inputType="textMultiLine"
        android:padding="20dp" />

    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="33dp"
        android:layout_marginRight="45dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:hint="Product quantity"
        android:inputType="textMultiLine"
        android:padding="20dp" />

    <Button
        android:id="@+id/add_new_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="151dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:text="Add to Stock"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</RelativeLayout>

